src/styles/components/_internal-nav.scss
.internal__nav {
    --nav-top-position: 73.06px;

    .wrapper {

        max-width: calc(100% - (var(--wrapper-margin) / 2));
        margin-left: auto;
        margin-right: 0;

        @media screen and (min-width: 768px) {
            margin: 0 auto;
            max-width: var(--wrapper-max-width);
        }
    }

    &.is--sticky {
        position: fixed;
        top: var(--nav-top-position);
        left: 0;
        width: 100%;
        z-index: 5;

        // background-image: url('/assets/images/header-bg-mobile.png');
        // background-repeat: no-repeat;
        // background-size: cover;
        background-color: rgb(0 0 0 / 95%);

        @media screen and (max-width: 374px) {
            margin-top: -6px;
        }

        @media screen and (min-width: 768px) {
            .internal__nav_list {
                padding-top: 1rem;
            }
        }
    }

    .internal__nav_list {
        display: flex;
        justify-content: flex-start;
        padding: .75rem 0;
        position: relative;

        overflow-x: scroll;

        &::-webkit-scrollbar {
            display: none;
        }

        @media screen and (min-width: 768px) {
            padding-top: 3rem;
            margin-bottom: 1.5rem;
            padding-bottom: 1.5rem;

            justify-content: center;

            &::after {
                content: "";
                background: $color-red;
                height: 1px;
                width: 98%;
                max-width: 62.1875rem;

                position: absolute;
                bottom: 0;
                left: 50%;
                transform: translateX(-50%);
            }
        }
    }

    .internal__nav_list_item {
        padding: .25rem 2rem;
        list-style-type: none;
        flex: 0 0 auto;

        @media screen and (max-width: 500px) {
            &:first-of-type {
                padding-left: 0;
            }
        }

        &:not(:first-of-type) {
            border-left: 1px solid $color-red;
        }

        &.is--active {
            .internal__nav_list_item_link {
                position: relative;
                font-weight: 700;

                &::after {
                    content: "";
                    width: 100%;
                    background: $color-red;
                    height: .1875rem;

                    position: absolute;
                    top: 101%;
                    left: 0;
                }
            }
        }

        .internal__nav_list_item_link {
            color: $color-white;
            font-size: 1rem;
            font-weight: 400;
            line-height: 24px;
            font-family: "oswald", sans-serif;

            @media screen and (min-width: 768px) {
                font-size: 1.5rem;
                line-height: 36px;
            }

            &:hover {
                color: $color-red;
            }
        }
    }
}

